fixed body padding on mobile

--- a/assets/global.styl
+++ b/assets/global.styl
@@ -283,8 +283,7 @@ body
 
 @media all and (max-width:768px)
 	body
-		&.template-index
-			padding-top 60px !important
+		padding-top 60px !important
 	
 	body .BOLD-mc-picker-mnt[data-picker-location="bottom-middle"]
 		bottom 0 !important
