--- a/assets/main.css
+++ b/assets/main.css
@@ -323,7 +323,7 @@ body .yali_footer__copyright {
   text-align: center;
 }
 @media all and (max-width: 768px) {
-  body.template-index {
+  body {
     padding-top: 60px !important;
   }
   body .BOLD-mc-picker-mnt[data-picker-location="bottom-middle"] {
